force-app/main/default/objects/SurveyQuestionnaire__c/SurveyQuestionnaire__c.object-meta.xml
<CustomObject>
    <label>SurveyQuestionnaire</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>SurveyQuestionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyQuestionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>