force-app/main/default/objects/SurveyQuestionnaire__c/fields/isDependent__c.field-meta.xml
<CustomField>
        <fullName>isDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify whether the next question is dependent on the current option</description>
        <label>isDependent</label>
        <type>Checkbox</type>
    </CustomField>