force-app/main/default/objects/SurveyQuestionnaire__c/fields/SurveyQuestion__c.field-meta.xml
<CustomField>
        <fullName>SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>SurveyQuestion__c</referenceTo>
        <relationshipLabel>SurveyQuestionnaires</relationshipLabel>
        <relationshipName>SurveyQuestionnaires</relationshipName>
        <type>Lookup</type>
    </CustomField>